--- a/components/footer.html
+++ b/components/footer.html
@@ -10,7 +10,8 @@
             <footer class="footer-background">
                 <div class="footer-main">
                     <div class="footer-top-block">
-                        <a href="index.html" class="logo"
+                        <a href="../index.html" class="logo"
+                        target="_blank"
                             ><img
                                 src="../img/logo-white.svg"
                                 alt="JustHome_logo"
