--- a/scss/_widget.scss
+++ b/scss/_widget.scss
@@ -3,7 +3,7 @@
 .widget {
     position: relative;
     background-color: $color-white;
-    width: 520px;
+    width: 432px;
     height: 520px;
     border-radius: 12px;
     cursor: pointer;
@@ -11,7 +11,7 @@
     .image-background {
         background-image: url(/img/widget1-1.png);
         background-size: cover;
-        width: 520px;
+        width: 100%;
         height: 420px;
         border-radius: 12px 12px 0 0;
     }
@@ -22,7 +22,7 @@
         @include flex-center(column, space-between, space-between);
         gap: 10px;
         position: absolute;
-        width: 470px;
+        width: 100%;
         height: 140px;
         padding: 25px;
         top: 80%;
@@ -126,23 +126,32 @@
 
 // cities-widget
 
-.cities-widget {
-    background-image: url("/img/new-york.png");
-    width: 256px;
-    height: 318px;
-    background-size: cover;
-    position: relative;
-    padding: 40px;
-    cursor: pointer;
+.cities-widgets {
 
-    p:first-child {
-        @include font-style(400, 22px, $font-size-large, $color-white);
-    }
 
-    p:last-child {
-        @include font-style(300, 22px, $font-size-small, $color-white);
+
+    .cities-widget {
+        background-image: url("/img/new-york.png");
+        width: 256px;
+        height: 318px;
+        background-size: cover;
+        position: relative;
+        padding: 40px;
+        cursor: pointer;
+        
+    
+        p:first-child {
+            @include font-style(400, 22px, $font-size-large, $color-white);
+        }
+    
+        p:last-child {
+            @include font-style(300, 22px, $font-size-small, $color-white);
+        }
     }
+    
+
 }
+
 
 // Quotes
 
@@ -150,6 +159,10 @@
     @include flex-center(row, space-between, flex-start);
     gap: 40px;
     flex-wrap: wrap;
+
+    @media (max-width: 1440px) {
+        @include flex-center(row, center, center);
+    }
 
     .review-block {
         @include flex-center(column, flex-start, center);
