--- a/scss/about-us.scss
+++ b/scss/about-us.scss
@@ -35,6 +35,7 @@
     .why-us-content {
         @include flex-center(row, center, center);
         gap: 60px;
+        flex-wrap: wrap;
 
         .why-us-block {
             @include flex-center(column, center, center);
@@ -73,9 +74,18 @@
     @include flex-center(column, space-between, center);
     gap: 30px;
 
+    @media (max-width: 1100px) {
+        @include flex-center(column, center, center);
+    }
+
     .review-title {
         @include flex-center(row, space-between, center);
         width: 100%;
+
+        @media (max-width: 1440px) {
+            @include flex-center(column, center, center);
+            gap: 40px;
+        }
 
         .review-section-title {
             @include font-style(500, 52px, $font-size-xlarge, $color-primary);
@@ -107,11 +117,22 @@
 
 .become-agent-section {
     @include flex-center(row, space-between, center);
-    gap: 360px;
+    gap: 200px;
+    flex-wrap: wrap;
+
+    @media (max-width: 1440px) {
+        @include flex-center(row, center, center);
+        gap: 100px;
+    }
 
     .become-agent-left-block {
         @include flex-center(column, space-between, flex-start);
         gap: 40px;
+
+        @media (max-width: 1440px) {
+            @include flex-center(column, center, center);
+            text-align: center;
+        }
 
         .become-agent-content {
             @include flex-center(column, space-between, flex-start);
@@ -177,9 +198,13 @@
     }
 
     .sponsors {
-        @include flex-center(row, space-between, center);
+        @include flex-center(row, center, center);
         padding: 10px 20px;
         gap: 120px;
         flex-wrap: wrap;
+
+        @media (max-width: 1440px) {
+            @include flex-center(row, center, center);
+        }
     }
 }
