--- a/scss/listings.scss
+++ b/scss/listings.scss
@@ -6,13 +6,14 @@
     background-image: url("/img/listing-main-bg.png") !important;
     height: 965px !important;
 
+
     .listings-text-box {
-        @include flex-center(column, flex-start, flex-start);
+        @include flex-center(column, center, flex-start);
         gap: 20px;
-        position: absolute;
-        top: 50%;
-        left: 25%;
-        transform: translate(-50%, -50%);
+        max-width: 1440px;
+        padding: 200px 0;
+        margin: 0 auto;
+
 
         h1 {
             @include font-style(500, 78px, $font-size-xxlarge, $color-white);
@@ -63,9 +64,10 @@
     }
 
     .cities-widgets {
-        @include flex-center(row, space-between, space-between);
+        @include flex-center(row, center, space-between);
         gap: 40px;
         flex-wrap: wrap;
+
     }
 }
 
@@ -73,6 +75,12 @@
     @include flex-center(row, flex-start, flex-start);
     width: 100%;
     gap: 20px;
+    cursor: pointer;
+
+    @media (max-width: 1390px) {
+        @include flex-center(row, center, center);
+        width: 140px;
+    }
 
     .arrow-icon {
         background-color: $color-white;
